[package]
name = "nonsteam-game-artwork-copier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
dialoguer = { version = "0.10.4" }
dirs = "5.0.1"
lazy_static = "1.4.0"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "fs"] }
